# terrain-generation

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/viewer/: CMakeLists.txt
src/viewer/include/: image.h  shader.h  shader_program.h  texture.h  vertex_array.h  vertex_buffer.h  window.h
src/viewer/shaders/: basic.frag  basic.vert
src/viewer/src/: image.cpp  main.cpp  shader.cpp  shader_program.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp  window.cpp
